--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -8,6 +8,9 @@
 
 <div class="container-fluid" id="main">
     <div class="row">
+        <div class="col-sm-12">
+            <h2 class="page-title">My Resources</h2>
+        </div>
         <div class="col-lg-2" id="facets">
             <a class="btn btn-success" href="/hsapi/_internal/create-resource"><i class="fa fa-plus"></i> Create new</a>
 
@@ -76,7 +79,6 @@
             </div>
         </div>
         <div class="col-lg-10" id="items">
-            <h2 class="page-title">My Resources</h2>
             <div class="row">
 
                 <div class="col-sm-8 col-xs-12 pull-right">
@@ -99,13 +101,13 @@
                                                 <select id="input-resource-type" class="form-control pull-left">
                                                     <option value="" selected>All</option>
                                                     <option value="generic">Generic</option>
-                                                    <option value="geographic raster">Geographic Raster</option>
-                                                    <option value="model program">Model Program</option>
-                                                    <option value="model instance resource">Model Instance</option>
-                                                    <option value="swat model instance resource">Swat Model Instance</option>
-                                                    <option value="multidimensional">Multidimensional (NetCDF)</option>
-                                                    <option value="time series">Time Series</option>
                                                     <option value="geographic feature">Geographic Feature (ESRI Shapefiles)</option>
+                                                    <option value="geographic raster">Geographic Raster</option>
+                                                    <option value="model instance resource">Model Instance</option>
+                                                    <option value="model program">Model Program</option>
+                                                    <option value="multidimensional">Multidimensional (NetCDF)</option>
+                                                    <option value="swat model instance resource">Swat Model Instance</option>
+                                                    <option value="time series">Time Series</option>
                                                 </select>
                                             </div>
                                             <div class="form-group">
@@ -153,13 +155,13 @@
             </div>
 
             <!-- /input-group -->
-            <table id="item-selectors" class="table-striped table-hover">
+            <table id="item-selectors" class="table-hover">
                 <thead>
                 <tr>
                     <th><input class="all-rows-selector" type="checkbox" aria-label="..."></th>
                     <th>Type</th>
                     <th>Title</th>
-                    <th>Owner</th>
+                    <th>Owners</th>
                     <th>Last modified</th>
                     <th>Subject</th>
                     <th>Authors</th>
@@ -205,7 +207,7 @@
                                 {% elif res|resource_type == "Time Series" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
-                                {% elif res|resource_type == "Geographic Feature" %}
+                                {% elif res|resource_type == "Geographic Feature (ESRI Shapefiles)" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/geographic48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
                                 {% endif %}
@@ -272,7 +274,7 @@
                                 {% elif res|resource_type == "Time Series" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
-                                {% elif res|resource_type == "Geographic Feature" %}
+                                {% elif res|resource_type == "Geographic Feature (ESRI Shapefiles)" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/geographic48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
                                 {% endif %}
@@ -336,13 +338,13 @@
                                 {% elif res|resource_type == "SWAT Model Instance Resource" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/swat48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
-                                {% elif res|resource_type == "Multidimensional" %}
+                                {% elif res|resource_type == "Multidimensional (NetCDF)" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/multidimensional48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
                                 {% elif res|resource_type == "Time Series" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
-                                {% elif res|resource_type == "Geographic Feature" %}
+                                {% elif res|resource_type == "Geographic Feature (ESRI Shapefiles)" %}
                                     <img src="{{ STATIC_URL }}img/resource-icons/geographic48x48.png"
                                          alt="{{ res|resource_type }}" title="{{ res|resource_type }}"/>
                                 {% endif %}
@@ -418,7 +420,7 @@
                 <div class="modal-body">
                     <table id="table-user-labels" class="table">
                         <tbody>
-                            <tr><td><i>No labels found.</i></td></tr>
+                            <tr><td class="no-labels-found">No labels found.</td></tr>
 {#                            <tr>#}
 {#                                <td class="user-label">Test Label</td>#}
 {#                                <td><span class="glyphicon glyphicon-remove"></span></td>#}
@@ -481,27 +483,27 @@
             7 - Permission Level
         ==================================================*/
             var resourceTable = $("#item-selectors").DataTable({
-                "order": [[1, "desc"]],
+                "order": [[4, "asc"]],
                 "paging": false,
                 "info": false,
                 "columnDefs": [
                     {
-                        "targets": [5],
+                        "targets": [5],     // Subject
                         "visible": false,
                         "searchable": true
                     },
                     {
-                        "targets": [6],
+                        "targets": [6],     // Authors
                         "visible": false,
                         "searchable": true
                     },
                     {
-                        "targets": [7],
+                        "targets": [7],     // Permission level
                         "visible": false,
                         "searchable": true
                     },
                     {
-                        "targets": [0],
+                        "targets": [0],     // Actions
                         "orderable": false,
                         "searchable": false
                     }
