Fixed a bug where some fields were not editable. Table headers and values not vertically aligned to the top.

--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -17,7 +17,7 @@
                         <table class="custom-table">
                             <tbody>
                                 {% if original_coverage.projection %}
-                                    <tr><th class="text-muted">Coordinate Reference System: </th><td>{{ original_coverage.projection}}</td></tr>
+                                    <tr><th class="text-muted">Coordinate Reference System </th><td>{{ original_coverage.projection}}</td></tr>
                                 {% endif %}
 
                                 {% if original_coverage.projection_string_type %}
