--- a/hs_geo_raster_resource/templates/pages/rasterresource.html
+++ b/hs_geo_raster_resource/templates/pages/rasterresource.html
@@ -103,7 +103,7 @@
         {% endif %}
 
         {% if bandInformation %}
-            <div class="col-sm-12" style="margin-bottom:40px;">
+            <div class="col-sm-12 pull-left" style="margin-bottom:40px;">
                 <legend>Band Information</legend>
                 <div id="variables" class="well clearfix">
                     <div class="row">
