--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -851,7 +851,7 @@
                                             <span class="glyphicon glyphicon-file file-icon"></span>
                                     <span>
                                         <span class="label-file-name">{{ f.resource_file.name|slice:"33:" }}</span>
-{#                                        <p class="label-file-size">{{ f.resource_file.size|filesizeformat }}</p>#}
+                                        <p class="label-file-size">{{ f.resource_file.size|filesizeformat }}</p>
                                     </span>
                                         </td>
                                         {#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
